argocd/apps/nepenthes/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nepenthes
  labels:
    app: nepenthes
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nepenthes
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nepenthes
    spec:
      imagePullSecrets:
        - name: gitea-pull-secrets
      containers:
        - name: nepenthes
          image: gitea.yanello.net/marcus/nepenthes:latest
          ports:
            - containerPort: 8893
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              memory: 50Mi
              cpu: 10m
            limits:
              memory: 200Mi
              cpu: 100m
          volumeMounts:
            - name: config
              mountPath: /etc/nepenthes-config.yml
              subPath: nepenthes-config.yml
      volumes:
        - name: config
          configMap:
            name: config
