argocd/apps/nepenthes/manifests/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nepenthes-gateway
spec:
  addresses:
    - value: 10.10.8.1
      type: IPAddress
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      hostname: "yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      hostname: "yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: root-domain-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
  hostnames:
    - "yanello.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: tls-passthrough-gateway
# spec:
#   addresses:
#     - value: 10.10.8.1
#       type: IPAddress
#   gatewayClassName: istio
#   listeners:
#     - name: gateway-tls-passthrough
#       protocol: TLS
#       port: 443
#       hostname: "*.yanello.net"
#       tls:
#         mode: Passthrough
#       allowedRoutes:
#         namespaces:
#           from: All
